documentation and default config changes resulting from new workspace-control implementation

--- a/service/service/java/source/etc/workspace-service/vmm.conf
+++ b/service/service/java/source/etc/workspace-service/vmm.conf
@@ -6,7 +6,7 @@
 
 # Path to the workspace-control program on the VMM nodes:
 
-control.path=/opt/workspace/bin/workspace-control
+control.path=/opt/nimbus/bin/workspace-control.sh
 
 
 # Backend tmp path:
@@ -15,7 +15,7 @@ control.path=/opt/workspace/bin/workspace-control
 # the service needs to know where on the VMMs to send the temporary files for
 # workspace-control to be able to patch the images.
 
-control.tmp.dir=/opt/workspace/tmp
+control.tmp.dir=/opt/nimbus/var/workspace-control/tmp
 
 
 # Advertised VMM to remote client; only 'Xen' is currently supported
