Fix paths to libexec scripts

--- a/control/etc/workspace-control/sudo.conf
+++ b/control/etc/workspace-control/sudo.conf
@@ -36,12 +36,14 @@ sudo: /usr/bin/sudo
 # The following is a permissions example for one of the programs, the same thing
 # applies to each program called under sudo.
 # 
-# "/opt/nimbus/libexec/dhcp-config.sh" should be owned by root and chmod 700
+# "/opt/nimbus/libexec/workspace-control/dhcp-config.sh" should be owned by root
+# and chmod 700
 #
 # Since we call it via sudo, the default dhcpconfig value
-# "/opt/nimbus/libexec/dhcp-config.sh" implies that not just the script but
-# also the enclosing directories /opt, /opt/nimbus/, and /opt/nimbus/libexec
-# are not writeable by any account but root. 
+# "/opt/nimbus/libexec/workspace-control/dhcp-config.sh" implies that not just
+# the script but also the enclosing directories /opt, /opt/nimbus/,
+# /opt/nimbus/libexec, and /opt/nimbus/libexec/workspace-control are not
+# writeable by any account but root. 
 #
 # All of these configuration files and the enclosing directories should also
 # be writeable by no account but root.
