Further refactoring to account for the external configuration file + Additional error handling added to nimbus_server_script.py for the DerbyDB Consistency plug-in

--- a/monitoring/nagios/monitoring_config.cfg
+++ b/monitoring/nagios/monitoring_config.cfg
@@ -6,4 +6,6 @@ Server_Tmp_Location = /tmp/
 Nagios_Location = /usr/local/nagios
 Java_Location = /usr/java/latest
 IJ_Location = /opt/sun/javadb
+Derby_Location = /usr/java/jdk1.6.0_16/db
+
 
