Minor bug fixes - converted kB to MB and fixed the core count reporting for the VMCores plugin

--- a/monitoring/nagios/monitoring_config.cfg
+++ b/monitoring/nagios/monitoring_config.cfg
@@ -1,5 +1,5 @@
 [Nimbus_Monitoring]
-Nimbus_Server_Address = https://someserver.ca:8443/wsrf/services/DefaultIndexService
+Nimbus_Server_Address = https://vmcgs29.phys.uvic.ca:8443/wsrf/services/DefaultIndexService
 Nimbus_Install_Location = /usr/local/nimbus
 Globus_Install_Location = /usr/local/globus-4.0.8
 Server_Tmp_Location = /tmp/
