changed misleading option name

--- a/messaging/query/java/source/etc/query/query.conf
+++ b/messaging/query/java/source/etc/query/query.conf
@@ -2,11 +2,11 @@
 # Configuration file for EC2 Query API interface to Nimbus
 ####################################################################
 
-# Whether query interface should listen on HTTPS. Disabled by default. You
-# must configure keystore information below before enabling.
-https.enabled=false
+# EC2 query interface is disabled by default. You must configure 
+# the keystore information below before enabling.
+query.enabled=false
 
-# port number of HTTPS server
+# port number of HTTPS server.  There is no option to use non-HTTPS.  
 https.port=8080
 
 # path to Java keystore file, for serving up Query API via SSL.
