Fixed REST testserver, for real this time.

--- a/messaging/rest/java/source/build.xml
+++ b/messaging/rest/java/source/build.xml
@@ -61,9 +61,9 @@
             <include name="*.jar"/>
         </fileset>
 
-        <fileset dir="${nimbus.messaging.gt4_0.common.dist.dir}">
+        <!--<fileset dir="${nimbus.messaging.gt4_0.common.dist.dir}">
             <include name="*.jar"/>
-        </fileset>
+        </fileset>  -->
 
         <fileset dir="${nimbus.service.api.lib.dir}">
               <include name="*.jar"/>
