Add support to service for http image staging
Signed-off-by: Tim Freeman <tim@timfreeman.org>

--- a/service/service/java/source/etc/workspace-service/global-policies.conf
+++ b/service/service/java/source/etc/workspace-service/global-policies.conf
@@ -67,3 +67,11 @@ termination.offset.seconds=600
 # per-use if one justs wants to limit all static IP use
 
 allow.static.addresses=false
+
+
+# POLICY: allowed.http.hosts
+#
+# This is a list of hosts that the users are allowed to propagate images from 
+# via http propagation. This should be a comma separated list. 
+
+allowed.http.hosts=
