Minor rest fixes.

--- a/messaging/rest/java/source/build.properties
+++ b/messaging/rest/java/source/build.properties
@@ -15,7 +15,7 @@ nimbus.messaging.gt4_0.common.lib.dir=../../../gt4.0/java/common/lib/
 nimbus.messaging.gt4_0.common.dist.dir=../../../gt4.0/java/common/dist/
 nimbus.messaging.query.lib.dir=../../../query/java/source/lib/
 nimbus.service.api.lib.dir=../../../../service-api/java/source/lib/
-
+nimbus.autocommon.dist.dir=../../../../autocommon/dist
 # you can override this in ~/nimbus.build.properties
 nimbus.java.compilerarg=-nowarn
 
