Rigged REST into ant build and deploy.

--- a/messaging/gt4.0/java/gar-builder/build.xml
+++ b/messaging/gt4.0/java/gar-builder/build.xml
@@ -155,6 +155,14 @@
                 <include name="*.jar"/>
                 <include name="*LICENSE*"/>
             </fileset>
+            <fileset dir="${nimbus.messaging.rest.dist.dir}">
+                <include name="*.jar"/>
+                <include name="*LICENSE*"/>
+            </fileset>
+            <fileset dir="${nimbus.messaging.rest.lib.dir}">
+                <include name="*.jar"/>
+                <include name="*LICENSE*"/>
+            </fileset>
 
         </copy>
     </target>
@@ -173,6 +181,9 @@
         </copy>
         <copy todir="${nimbus.messaging.gt4_0.gar.build.etc.dir}">
             <fileset dir="${nimbus.messaging.query.etc.dir}" />
+        </copy>
+        <copy todir="${nimbus.messaging.gt4_0.gar.build.etc.dir}">
+            <fileset dir="${nimbus.messaging.rest.etc.dir}" />
         </copy>
         <copy todir="${nimbus.messaging.gt4_0.gar.build.etc.dir}">
             <fileset dir="${nimbus.messaging.gt4_0.gar.etc.dir}" />
