--- a/messaging/gt4.0/java/gar-builder/build.properties
+++ b/messaging/gt4.0/java/gar-builder/build.properties
@@ -18,6 +18,7 @@ nimbus.service.api.basedir=${nimbus.basedir}/service-api/java/source
 nimbus.messaging.gt4_0.basedir=${nimbus.basedir}/messaging/gt4.0/java
 nimbus.messaging.gt4_0-elastic.basedir=${nimbus.basedir}/messaging/gt4.0-elastic/java
 nimbus.messaging.query.basedir=${nimbus.basedir}/messaging/query/java/source
+nimbus.messaging.rest.basedir=${nimbus.basedir}/messaging/rest/java/source
 nimbus.metadata-server.basedir=${nimbus.basedir}/metadata/java/source
 
 ##########################################
@@ -55,6 +56,7 @@ nimbus.messaging.gt4_0.gar.build.bin.dir=${nimbus.messaging.gt4_0.gar.build.dir}
 nimbus.service.main.etc.dir=${nimbus.service.main.basedir}/etc
 nimbus.messaging.gt4_0-elastic.etc.dir=${nimbus.messaging.gt4_0-elastic.basedir}/msgbridge/etc
 nimbus.messaging.query.etc.dir=${nimbus.messaging.query.basedir}/etc
+nimbus.messaging.rest.etc.dir=${nimbus.messaging.rest.basedir}/etc
 nimbus.messaging.gt4_0.gar.etc.dir=etc
 
 
@@ -89,6 +91,8 @@ nimbus.messaging.gt4_0-elastic.msgbridge.lib.dir=${nimbus.messaging.gt4_0-elasti
 nimbus.messaging.query.dist.dir=${nimbus.messaging.query.basedir}/dist/
 nimbus.messaging.query.lib.dir=${nimbus.messaging.query.basedir}/lib/
 
+nimbus.messaging.rest.dist.dir=${nimbus.messaging.rest.basedir}/dist/
+nimbus.messaging.rest.lib.dir=${nimbus.messaging.rest.basedir}/lib/
 
 ##################################################################
 # JARs we *might* need to put into GLOBUS_LOCATION at install time
