Start REST service on container bootup.

--- a/messaging/rest/java/source/etc/rest/rest.conf
+++ b/messaging/rest/java/source/etc/rest/rest.conf
@@ -1,4 +1,12 @@
-gridmap.path=/path/to/gridmap
-groupauthz.path=/path/to/groupauthz
-query.usermap.path=/path/to/users.txt
+rest.enabled=false
+rest.port=4443
+
+keystore.path=/path/to/keystore
+keystore.password=secrets
+
+gridmap.path=file:///path/to/grid-mapfile
+groupauthz.path=
+query.usermap.path=file://@QUERY_CONFDIR@/users.txt
 gridmap.localuser=cloudimages
+
+rest.spring.path=file://@REST_CONFDIR@/other/main.xml
