Unecessary XSL removed and updated other files for reading of sleep interval from config file

--- a/monitoring/nagios/monitoring_config.cfg
+++ b/monitoring/nagios/monitoring_config.cfg
@@ -1,11 +1,14 @@
 [Nimbus_Monitoring]
-Nimbus_Server_Address = https://somecloud.com:8443/wsrf/services/DefaultIndexService
+Nimbus_Server_Address = https://vmcgs29.phys.uvic.ca:8443/wsrf/services/DefaultIndexService
 Nimbus_Install_Location = /usr/local/nimbus
-Globus_Install_Location = /usr/local/globus-4.0.8
+Globus_Install_Location = /usr/local/nimbus
 Server_Tmp_Location = /tmp/
 Nagios_Location = /usr/local/nagios
-Java_Location = /usr/java/latest
-IJ_Location = /opt/sun/javadb
+Java_Location = /usr/java/jdk1.6.0_17
+IJ_Location = /usr/java/jdk1.6.0_16/db/bin/ij
 Derby_Location = /usr/java/jdk1.6.0_16/db
-
+RealTime_XML_Output_Location = /tmp/activeSlots.xml
+RealTime_Update_interval = 3
+Perceptor_RedisDB_Num = 1
+Sky_Key = daCloud
 
