Added variable to control how fast perceptor updates itself

--- a/monitoring/perceptor/perceptor.cfg
+++ b/monitoring/perceptor/perceptor.cfg
@@ -4,4 +4,5 @@ Target_VM_Slots_Path = /activeslots.xml
 Target_Monitoring_Data_Path = /mdsresource.xml
 Clusters_Addr_File = daClusters.dat
 Target_Redis_DB_Id = 1
-Cloud_Key = daCloud
+Sky_Key = daCloud
+Update_Interval = 3
