--- a/monitoring/sky_aggregator/sky_aggregator.cfg
+++ b/monitoring/sky_aggregator/sky_aggregator.cfg
@@ -1,4 +1,4 @@
-[Perceptor]
+[SkyAggregator]
 Local_Monitoring_XML_Data = /tmp/mdsresource.xml
 Target_VM_Slots_Path = /activeslots.xml
 Target_Monitoring_Data_Path = /mdsresource.xml
