--- a/monitoring/sky_aggregator/sky_aggregator.cfg
+++ b/monitoring/sky_aggregator/sky_aggregator.cfg
@@ -3,6 +3,11 @@ Local_Monitoring_XML_Data = /tmp/mdsresource.xml
 Target_VM_Slots_Path = /activeslots.xml
 Target_Monitoring_Data_Path = /mdsresource.xml
 Clusters_Addr_File = daClusters.dat
+
+RedisDB_Server_Hostname = localhost
+RedisDB_Server_Port = 6379
+
 Target_Redis_DB_Id = 1
 Sky_Key = daCloud
+
 Update_Interval = 3
