Necessary additions for nimbus_nagios_data_processing.py

--- a/monitoring/nagios/monitoring_config.cfg
+++ b/monitoring/nagios/monitoring_config.cfg
@@ -1,5 +1,5 @@
 [Nimbus_Monitoring]
-Nimbus_Server_Address = https://vmcgs29.phys.uvic.ca:8443/wsrf/services/DefaultIndexService
+Nimbus_Server_Address = https://yourCloud.com:8443/wsrf/services/DefaultIndexService
 Nimbus_Install_Location = /usr/local/nimbus
 Globus_Install_Location = /usr/local/nimbus
 Server_Tmp_Location = /tmp/
@@ -11,4 +11,7 @@ RealTime_XML_Output_Location = /tmp/activeSlots.xml
 RealTime_Update_interval = 3
 Perceptor_RedisDB_Num = 1
 Sky_Key = daCloud
-
+[Nagios_Data_Processing]
+Nagios_Performance_Data_Loc = /tmp/service-perfdata
+Target_XML_File = /tmp/mdsresource.xml
+Time_Window = 600
