--- a/monitoring/nagios/monitoring_config.cfg
+++ b/monitoring/nagios/monitoring_config.cfg
@@ -1,5 +1,5 @@
 [Nimbus_Monitoring]
-Nimbus_Server_Address = https://yourCloud.com:8443/wsrf/services/DefaultIndexService
+Nimbus_Server_Address = https://somecloud.com:8443/wsrf/services/DefaultIndexService
 Nimbus_Install_Location = /usr/local/nimbus
 Globus_Install_Location = /usr/local/nimbus
 Server_Tmp_Location = /tmp/
@@ -7,11 +7,14 @@ Nagios_Location = /usr/local/nagios
 Java_Location = /usr/java/jdk1.6.0_17
 IJ_Location = /usr/java/jdk1.6.0_16/db/bin/ij
 Derby_Location = /usr/java/jdk1.6.0_16/db
-RealTime_XML_Output_Location = /tmp/activeSlots.xml
-RealTime_Update_interval = 3
-Perceptor_RedisDB_Num = 1
+
+
+Sky_Aggregator_RedisDB_Num = 1
 Sky_Key = daCloud
 [Nagios_Data_Processing]
 Nagios_Performance_Data_Loc = /tmp/service-perfdata
 Target_XML_File = /tmp/mdsresource.xml
 Time_Window = 600
+[Real_Time_Monitoring]
+RealTime_Update_interval = 3
+RealTime_XML_Output_Location = /tmp/activeSlots.xml
