Support for web listening on other than localhost

--- a/web/nimbusweb.conf
+++ b/web/nimbusweb.conf
@@ -20,6 +20,9 @@ ca.dir: var/ca
 
 webserver.port: 1443
 
+# Host to run the standalone webserver on.
+# IP address or hostname, use 0.0.0.0 to listen on all interfaces
+webserver.host: 0.0.0.0
 
 # Print URL
 # When full URLs are printed where the context is for outside use (for example
