Get nimbusrest url, key, and secret from web conf.

--- a/web/nimbusweb.conf
+++ b/web/nimbusweb.conf
@@ -33,6 +33,10 @@ webserver.host: 0.0.0.0
 
 print.url: https://localhost:1443/nimbus/
 
+# Nimbus REST url and credentials
+nimbusrest.url: https://localhost:4443/nimbus
+nimbusrest.key: testadmin
+nimbusrest.secret: secret
 
 # Text that you want displayed on the (public) welcome screen, after the
 # "If you do not have an account, " text on the "/nimbus/" web page.
