Fixed several small bugs in webapp and nimbusctl

--- a/web/nimbusweb.conf
+++ b/web/nimbusweb.conf
@@ -34,7 +34,7 @@ webserver.host: 0.0.0.0
 print.url: https://localhost:1443/nimbus/
 
 # Nimbus REST url and credentials
-nimbusrest.url: https://localhost:4443/nimbus
+nimbusrest.url: https://localhost:4443/admin
 nimbusrest.key: testadmin
 nimbusrest.secret: secret
 
