Some path updates

--- a/monitoring/nagios/monitoring_config.cfg
+++ b/monitoring/nagios/monitoring_config.cfg
@@ -1,13 +1,13 @@
 [Nimbus_Monitoring]
-Nimbus_Server_Address = https://someCloud.ca:8443/wsrf/services/DefaultIndexService
-Nimbus_Install_Location = /usr/local/nimbus
-Globus_Install_Location = /usr/local/nimbus
+Nimbus_Server_Address = https://somecloud.ca:8443/wsrf/services/DefaultIndexService
+Nimbus_Install_Location = /usr/local/nimbus/
+Globus_Install_Location = /usr/local/nimbus/
 Server_Tmp_Location = /tmp/
-Nagios_Location = /usr/local/nagios
-Java_Location = /usr/java/jdk1.6.0_17
+Nagios_Location = /usr/local/nagios/
+Java_Location = /usr/java/jdk1.6.0_17/
 IJ_Location = /usr/java/jdk1.6.0_16/db/bin/ij
-Derby_Location = /usr/java/jdk1.6.0_16/db
-Script_Location = /usr/local/nagios/libexec
+Derby_Location = /usr/java/jdk1.6.0_16/db/
+Script_Location = /usr/local/nagios/libexec/
 
 [Nagios_Data_Processing]
 Nagios_Performance_Data_Loc = /tmp/service-perfdata
@@ -18,4 +18,3 @@ Cloud_Name = Cirrus
 [Real_Time_Monitoring]
 RealTime_Update_Interval = 3
 RealTime_XML_Output_Location = /tmp/activeSlots.xml
-
