first step for bug 6990, consolidate service jars to one directory

--- a/autoconfiguration/build.properties
+++ b/autoconfiguration/build.properties
@@ -6,10 +6,10 @@ nimbus.autoconfig.gt4_0.gar.build.dir=build
 nimbus.autoconfig.gt4_0.build.dest=build/classes
 nimbus.autoconfig.gt4_0.etc.dir=etc
 nimbus.autoconfig.gt4_0.src.dir=src
-nimbus.autoconfig.gt4_0.lib.dir=lib
 nimbus.autoconfig.gt4_0.share.dir=share
 nimbus.autoconfig.gt4_0.jar.name=nimbus-autoconfig.jar
 
+nimbus.autoconfig.gt4_0.lib.dir=../lib/services
 
 ##########################################
 # IDs/properties sent into the GAR builder
@@ -38,7 +38,6 @@ nimbus.autoconfig.gt4_0.gar.build.bin.dir=${nimbus.autoconfig.gt4_0.gar.build.di
 ###############################
 
 nimbus.autocommon.java.dist.dir=../autocommon/dist
-nimbus.service.api.lib.dir=../service-api/java/source/lib
 nimbus.service.lib.dir=../service/service/java/source/dist
 
 
