--- a/messaging/gt4.0/java/common/build.properties
+++ b/messaging/gt4.0/java/common/build.properties
@@ -3,13 +3,13 @@ nimbus.messaging.gt4_0.common.print-noun=Nimbus GT4.0 messaging common
 nimbus.messaging.gt4_0.common.build.dir=build
 nimbus.messaging.gt4_0.common.build.dest=build/classes
 nimbus.messaging.gt4_0.common.src.dir=src
-nimbus.messaging.gt4_0.common.lib.dir=lib
 nimbus.messaging.gt4_0.common.dist.dir=dist
 nimbus.messaging.gt4_0.common.jar.name=nimbus-messaging-common-gt4.0.jar
 
+nimbus.messaging.gt4_0.common.lib.dir=../../../../lib/services
+
 # Dependencies from source tree
 nimbus.service.api.dist.dir=../../../../service-api/java/source/dist/
-nimbus.service.api.lib.dir=../../../../service-api/java/source/lib/
 
 # (gar is the 'dist' of stubs but we only want the jars)
 vws.gt4_0.stubs.build.lib.dir=../stubs/build/lib/
