--- a/messaging/rest/java/source/build.properties
+++ b/messaging/rest/java/source/build.properties
@@ -3,19 +3,17 @@ nimbus.messaging.rest.print-noun=Nimbus CXF REST Admin Interface
 nimbus.messaging.rest.build.dir=build
 nimbus.messaging.rest.build.dest=build/classes
 nimbus.messaging.rest.src.dir=src
-nimbus.messaging.rest.lib.dir=lib
 nimbus.messaging.rest.dist.dir=dist
 nimbus.messaging.rest.jar.name=nimbus-messaging-rest.jar
 
 nimbus.messaging.rest.testserver.keystore.dest=build/testkeystore.jks
 nimbus.messaging.rest.testserver.keystore.pass=thisisonlyatest.
 
+nimbus.messaging.rest.lib.dir=../../../../lib/services
+
 # Dependencies from source tree
-nimbus.messaging.gt4_0.common.lib.dir=../../../gt4.0/java/common/lib/
-nimbus.messaging.gt4_0.common.dist.dir=../../../gt4.0/java/common/dist/
-nimbus.messaging.query.lib.dir=../../../query/java/source/lib/
-nimbus.service.api.lib.dir=../../../../service-api/java/source/lib/
 nimbus.autocommon.dist.dir=../../../../autocommon/dist
+
 # you can override this in ~/nimbus.build.properties
 nimbus.java.compilerarg=-nowarn
 
