--- a/metadata/java/source/build.properties
+++ b/metadata/java/source/build.properties
@@ -6,12 +6,10 @@ nimbus.metadata-server.src.dir=src
 nimbus.metadata-server.dist.dir=dist
 nimbus.metadata-server.jar.name=nimbus-metadata-server.jar
 
+nimbus.metadata-server.lib.dir=../../../lib/services
+
 # Compile dependencies from source tree
-nimbus.metadata-server.lib-compile.dir=../../../service/service/java/source/lib
-nimbus.metadata-server.lib-compile2.dir=../../../service/service/java/source/lib-compile
 nimbus.service.api.dist.dir=../../../service-api/java/source/dist
-nimbus.service.api.lib.dir=../../../service-api/java/source/lib
-nimbus.service.api.lib2.dir=../../../service-api/java/source/lib-compile
 
 # you can override this in ~/nimbus.build.properties
 nimbus.java.compilerarg=-nowarn
