--- a/service/service/java/source/build.properties
+++ b/service/service/java/source/build.properties
@@ -3,17 +3,13 @@ nimbus.service.main.print-noun=Workspace Service module
 nimbus.service.main.build.dir=build
 nimbus.service.main.build.dest=build/classes
 nimbus.service.main.src.dir=src
-nimbus.service.main.lib.dir=lib
-nimbus.service.main.lib-compile.dir=lib-compile
 nimbus.service.main.dist.dir=dist
 nimbus.service.main.jar.name=nimbus-workspace-service.jar
 
-nimbus.basedir=../../../..
+nimbus.service.main.lib.dir=../../../../lib/services
 
 # Compile dependencies from source tree
-nimbus.service.api.dist.dir=${nimbus.basedir}/service-api/java/source/dist/
-nimbus.service.api.lib.dir=${nimbus.basedir}/service-api/java/source/lib-compile/
+nimbus.service.api.dist.dir=../../../../service-api/java/source/dist/
 
 # you can override this in ~/nimbus.build.properties
 nimbus.java.compilerarg=-nowarn
-
