--- a/messaging/gt4.0/java/gar-builder/build.xml
+++ b/messaging/gt4.0/java/gar-builder/build.xml
@@ -98,17 +98,12 @@
     <target name="lib_copies" depends="init">
 
         <copy todir="${nimbus.messaging.gt4_0.gar.build.lib.dir}">
-            
+
+            <fileset dir="${nimbus.libservices.dir}">
+                <include name="*.jar"/>
+                <include name="*LICENSE*"/>
+            </fileset>
             <fileset dir="${nimbus.service.api.dist.dir}">
-                <include name="*.jar"/>
-                <include name="*LICENSE*"/>
-            </fileset>
-            <fileset dir="${nimbus.service.api.lib.dir}">
-                <include name="*.jar"/>
-                <include name="*LICENSE*"/>
-            </fileset>
-            
-            <fileset dir="${nimbus.service.main.lib.dir}">
                 <include name="*.jar"/>
                 <include name="*LICENSE*"/>
             </fileset>
@@ -116,13 +111,7 @@
                 <include name="*.jar"/>
                 <include name="*LICENSE*"/>
             </fileset>
-            
             <fileset dir="${nimbus.metadata-server.dist.dir}">
-                <include name="*.jar"/>
-                <include name="*LICENSE*"/>
-            </fileset>
-
-            <fileset dir="${nimbus.messaging.gt4_0.common.lib.dir}">
                 <include name="*.jar"/>
                 <include name="*LICENSE*"/>
             </fileset>
@@ -130,12 +119,7 @@
                 <include name="*.jar"/>
                 <include name="*LICENSE*"/>
             </fileset>
-
             <fileset dir="${nimbus.messaging.gt4_0.msgbridge.dist.dir}">
-                <include name="*.jar"/>
-                <include name="*LICENSE*"/>
-            </fileset>
-            <fileset dir="${nimbus.messaging.gt4_0.msgbridge.lib.dir}">
                 <include name="*.jar"/>
                 <include name="*LICENSE*"/>
             </fileset>
@@ -151,19 +135,10 @@
                 <include name="*.jar"/>
                 <include name="*LICENSE*"/>
             </fileset>
-            <fileset dir="${nimbus.messaging.query.lib.dir}">
-                <include name="*.jar"/>
-                <include name="*LICENSE*"/>
-            </fileset>
             <fileset dir="${nimbus.messaging.rest.dist.dir}">
                 <include name="*.jar"/>
                 <include name="*LICENSE*"/>
             </fileset>
-            <fileset dir="${nimbus.messaging.rest.lib.dir}">
-                <include name="*.jar"/>
-                <include name="*LICENSE*"/>
-            </fileset>
-
         </copy>
     </target>
 
