--- a/service-api/java/source/build.properties
+++ b/service-api/java/source/build.properties
@@ -4,11 +4,11 @@ nimbus.service.api.build.dest=build/classes
 nimbus.service.api.src.dir=src
 nimbus.service.api.docs.dir=doc
 nimbus.service.api.javadocs.dir=doc/javadoc
-nimbus.service.api.lib.dir=lib
-nimbus.service.api.lib-compile.dir=lib-compile
 nimbus.service.api.dist.dir=dist
 nimbus.service.api.jar.name=nimbus-service-api.jar
 nimbus.service.api.javadoc.css=doc/style.css
+
+nimbus.service.api.lib.dir=../../../lib/services
 
 # you can override this in ~/nimbus.build.properties
 nimbus.java.compilerarg=-nowarn
