first step for bug 6990, consolidate service jars to one directory

--- a/autocommon/build.properties
+++ b/autocommon/build.properties
@@ -2,7 +2,8 @@ autocommon.src.dir=src
 autocommon.build.dir=build-tmp
 autocommon.dist.dir=dist
 autocommon.jar.name=nimbus-auto-common.jar
-autocommon.lib.dir=lib-compile
+
+autocommon.lib.dir=../lib/services
 
 # you can override this in ~/nimbus.build.properties
 nimbus.java.compilerarg=-nowarn
