bug 6990, autogenerated code jars are now treated as libraries, regenerate them by running scripts/stubs-build.sh

--- a/ctx-broker/build.xml
+++ b/ctx-broker/build.xml
@@ -53,6 +53,9 @@
         <ant dir="${nimbus.ctxbroker.stubs.dir}" target="dist" />
     </target>
 
+    <target name="stubscopyjar" depends="init">
+        <ant dir="${nimbus.ctxbroker.stubs.dir}" target="copyjar" />
+    </target>
 
     <!-- *******************************************************************
          COMPILATION
