--- a/ctx-broker/wsdl/stubs/build.properties
+++ b/ctx-broker/wsdl/stubs/build.properties
@@ -5,7 +5,8 @@ nimbusctx.gt4_0.schemas.dist=../schema/
 schema.subdirs=nimbusctx
 ctx.wsdl.root=nimbus_ctx
 
-nimbusctx.gt4_0.stubs.java.subdirs=org/nimbustools/ctxbroker/gt4_0/generated
+nimbusctx.gt4_0.stubs.lib.generated.dir=../../../lib/generated
+
 nimbusctx.gt4_0.stubs.build.dir=build
 nimbusctx.gt4_0.stubs.build.dest=build/classes
 nimbusctx.gt4_0.stubs.build.src.dir=build/src
