--- a/messaging/gt4.0-elastic/java/stubs/build.properties
+++ b/messaging/gt4.0-elastic/java/stubs/build.properties
@@ -5,7 +5,8 @@ vws.gt4_0-elastic.schemas.dist=../../schema/dist
 schema.subdirs=elastic-2009-08-15
 vws.gt4_0-elastic.wsdl=ec2.wsdl
 
-vws.gt4_0-elastic.stubs.java.subdirs=org/nimbustools/messaging/gt4_0_elastic/generated
+nimbus.messaging.gt4_0-elastic.stubs.lib.generated.dir=../../../../lib/generated
+
 vws.gt4_0-elastic.stubs.build.dir=build
 vws.gt4_0-elastic.stubs.build.lib.dir=build/lib
 vws.gt4_0-elastic.stubs.build.dest=build/classes
