--- a/messaging/gt4.0/java/stubs/build.properties
+++ b/messaging/gt4.0/java/stubs/build.properties
@@ -10,7 +10,8 @@ group.wsdl.root=workspace_group
 ensemble.wsdl.root=workspace_ensemble
 ctx.wsdl.root=workspace_ctx
 
-vws.gt4_0.stubs.java.subdirs=org/nimbustools/messaging/gt4_0/generated
+nimbus.messaging.gt4_0.stubs.lib.generated.dir=../../../../lib/generated
+
 vws.gt4_0.stubs.build.dir=build
 vws.gt4_0.stubs.build.lib.dir=build/lib
 vws.gt4_0.stubs.build.dest=build/classes
