bug 6990, consolidated client libraries as well

--- a/service/client/java/source/build.properties
+++ b/service/client/java/source/build.properties
@@ -6,7 +6,6 @@ nimbus.client.gt4_0.gar.build.dir=build
 nimbus.client.gt4_0.build.dest=build/classes
 nimbus.client.gt4_0.etc.dir=etc
 nimbus.client.gt4_0.src.dir=src
-nimbus.client.gt4_0.lib.dir=lib
 nimbus.client.gt4_0.share.dir=share
 nimbus.client.gt4_0.jar.name=nimbus-clients-gt4.0.jar
 
@@ -39,13 +38,11 @@ nimbus.client.gt4_0.gar.build.docs.dir=${nimbus.client.gt4_0.gar.build.dir}/docs
 # Dependencies from source tree
 ###############################
 
-nimbus.messaging.java.basedir=../../../../messaging/gt4.0/java/
-
-nimbus.messaging.gt4_0.common.dist.dir=${nimbus.messaging.java.basedir}/common/dist/
+nimbus.messaging.gt4_0.common.dist.dir=../../../../messaging/gt4.0/java/common/dist/
 
 # (gar is the 'dist' of stubs but we only want the jars... will be better later)
-nimbus.gt4_0.stubs.build.lib.dir=${nimbus.messaging.java.basedir}/stubs/build/lib/
-
+nimbus.gt4_0.stubs.lib.generated.dir=../../../../lib/generated
+nimbus.gt4_0.stubs.lib.clients.dir=../../../../lib/clients
 
 # you can override this in ~/nimbus.build.properties
 nimbus.java.compilerarg=-nowarn
