--- a/service/client/java/source/build.xml
+++ b/service/client/java/source/build.xml
@@ -105,14 +105,16 @@
 
         <copy todir="${nimbus.client.gt4_0.gar.build.lib.dir}">
 
-            <fileset dir="${nimbus.client.gt4_0.lib.dir}">
+            <fileset dir="${nimbus.gt4_0.stubs.lib.generated.dir}">
                 <include name="*.jar"/>
-                <include name="*LICENSE*"/>
+            </fileset>
+
+            <fileset dir="${nimbus.gt4_0.stubs.lib.clients.dir}">
+                <include name="*.jar"/>
             </fileset>
 
             <fileset dir="${nimbus.messaging.gt4_0.common.dist.dir}">
                 <include name="*.jar"/>
-                <include name="*LICENSE*"/>
             </fileset>
 
         </copy>
@@ -153,11 +155,11 @@
             <exclude name="nimbus-*.jar" />
         </fileset>
 
-        <fileset dir="${nimbus.client.gt4_0.lib.dir}">
+        <fileset dir="${nimbus.gt4_0.stubs.lib.clients.dir}">
               <include name="*.jar"/>
         </fileset>
 
-        <fileset dir="${nimbus.gt4_0.stubs.build.lib.dir}">
+        <fileset dir="${nimbus.gt4_0.stubs.lib.generated.dir}">
             <include name="*.jar"/>
         </fileset>
 
