Enable query API by default, rigged keystore path.

--- a/messaging/query/java/source/etc/query/query.conf
+++ b/messaging/query/java/source/etc/query/query.conf
@@ -4,20 +4,22 @@
 
 # EC2 query interface is disabled by default. You must configure 
 # the keystore information below before enabling.
-query.enabled=false
+query.enabled=true
 
 # port number of HTTPS server.  There is no option to use non-HTTPS.  
-https.port=8080
+https.port=8444
 
 # path to Java keystore file, for serving up Query API via SSL.
-# NOTE: this file is not created by the installer (yet). If you don't have
-# an existing Java keystore, see
-# http://docs.codehaus.org/display/JETTY/How+to+configure+SSL#HowtoconfigureSSL-step1
-# for details on creating one. Then place the path here and the password
-# below.
-keystore.path=@QUERY_CONFDIR@/keystore.jks
+# This file is created by the installer, and should be placed in
+# $NIMBUS_HOME/var/keystore.jks
+keystore.path=@DEPLOY_DIR@/../var/keystore.jks
 
-# password of java keystore specified above
+# password of java keystore specified above.
+# Note: You can change this password if you like, but it practice it doesn't
+# usually matter because the keystore is stored alongside an unencrypted
+# PEM version of the same key. Just ensure that each of these files
+# are only readable by the Nimbus user.
+#
 keystore.password=changeit
 
 
