--- a/service/service/java/source/etc/workspace-service/ssh.conf
+++ b/service/service/java/source/etc/workspace-service/ssh.conf
@@ -12,8 +12,8 @@
 # to get to the NON-ROOT account on a VMM that will run workspace-control, what
 # is the <user> part of the <user>@<hostname> you would type?
 #
-# If missing, the username is implicit, SSH uses the use the same account
-# that the service is running under.
+# If missing, the username is implicit, SSH uses the same account that the
+# service is running under.
 
 control.ssh.user=
 
