This should make the administrator understand this configuration a lot better

--- a/control/etc/workspace-control/networks.conf
+++ b/control/etc/workspace-control/networks.conf
@@ -21,6 +21,8 @@ default: virbr0
 # If you don't like the /bitmask subnet syntax, you can use ranges but they 
 # must be valid subnet ranges, e.g., 192.168.0.0-192.168.0.255
 #
+# BRIDGENAME-TO-PICK: SUBNET-OF-VM-NIC
+#
 # Examples:
 #    virbr2: 140.221.0.0/16
 
@@ -41,9 +43,23 @@ default: virbr0
 # Directing the request to a specific interface only also helps prevent DHCP
 # requests from being broadcast to other VMs or the real network.
 
-# The DHPCd process will be listening for requests on a particular interface:
+# The DHPCd process will be listening for requests on a particular interface
+# in domain 0.  This will be something like 'eth0' usually for Xen.
+#
+# This diagram may help explain: http://tinyurl.com/36n9twq (xensource.com)
+# 
+# This dom0 interface needs to be bridged to the same bridge that a VM NIC
+# is bridged to.  The configurations in this section ("dhcp-bridges") allow
+# the program to lookup which bridge a VM NIC is bridged to and get the
+# matching DHCPd interface so that security rules can be constructed properly.
 
-eth0: eth0
+# The bridgename for the VM NIC is chosen above.  Here is where you map it to
+# the DHCPd interface to use.
+#
+# BRIDGENAME-CHOSEN: DHCPD-LISTENING-INTERFACE
+
+xenbr0: eth0
+
 
 # Also note that for each network DHPCd will serve, a "subnet" configuration
 # will be required in dhcpd.conf. See share/workspace-control/dhcpd.conf.example
