Fix for Bug 6992: Nimbus EC2 Query API limits HTTP headers to 4k

--- a/messaging/query/java/source/etc/query/query.conf
+++ b/messaging/query/java/source/etc/query/query.conf
@@ -32,3 +32,5 @@ query.spring.path=file://@QUERY_CONFDIR@/other/main.xml
 # path of file containing mappings of query access credentials to DNs
 query.usermap.path=/@QUERY_CONFDIR@/users.txt
 
+# header buffer size in bytes (for larger user-data, etc.)
+query.header.size=8192
