--- a/control/etc/workspace-control/propagation.conf
+++ b/control/etc/workspace-control/propagation.conf
@@ -29,3 +29,9 @@ scp: /usr/bin/scp
 # workspace-control or the configured scp_user account).
 # This defaults to true if missing or if value is anything but 'false'
 #scp_user_override: false
+
+
+# Hadoop Distributed File System (hdfs)
+# Make this point to the hadoop executable of your install.  Enviroment 
+# variables of the form $var and ${var} will be expanded if possible.
+hdfs: /usr/bin/hadoop
