fixed off by one problem with object and alias types

--- a/service/service/java/source/etc/workspace-service/other/common.conf
+++ b/service/service/java/source/etc/workspace-service/other/common.conf
@@ -65,4 +65,7 @@ caches.dir=$NIMBUS_HOME/services/var/nimbus/caches
 
 msgsinks.dir=$NIMBUS_HOME/services/var/nimbus/msg-sinks
 
+# MERGE_TODO
+# abs path to pynimbusauthz db
+sqlite.dbfile=/@NUMBUSAUTHZDB@
 
