fixed off by one problem with object and alias types

--- a/service/service/java/source/etc/workspace-service/other/common.conf
+++ b/service/service/java/source/etc/workspace-service/other/common.conf
@@ -61,4 +61,6 @@ caches.dir=/@WORKSPACE_PERSISTENCEDIR@/caches
 
 msgsinks.dir=/@WORKSPACE_PERSISTENCEDIR@/msg-sinks
 
+# abs path to pynimbusauthz db
+sqlite.dbfile=/@NUMBUSAUTHZDB@
 
