adding jars needed for s3 protocol
config file modifications

--- a/service/service/java/source/etc/workspace-service/other/common.conf
+++ b/service/service/java/source/etc/workspace-service/other/common.conf
@@ -65,7 +65,8 @@ caches.dir=$NIMBUS_HOME/services/var/nimbus/caches
 
 msgsinks.dir=$NIMBUS_HOME/services/var/nimbus/msg-sinks
 
-# MERGE_TODO
-# abs path to pynimbusauthz db
-sqlite.dbfile=/@NUMBUSAUTHZDB@
 
+# MERGE_TODO
+cumulus.home.dir=/@CUMULUSDIR@
+cumulus.authz.db=/@CUMULUSDIR@/etc/authz.db
+cumulus.repo.dir=/@CUMULUSDIR@/posixdata
