--- a/service/service/java/source/etc/workspace-service/other/common.conf
+++ b/service/service/java/source/etc/workspace-service/other/common.conf
@@ -68,5 +68,5 @@ msgsinks.dir=$NIMBUS_HOME/services/var/nimbus/msg-sinks
 
 # MERGE_TODO
 cumulus.home.dir=/@CUMULUSDIR@
-cumulus.authz.db=/@CUMULUSDIR@/etc/authz.db
+cumulus.authz.db=/@AUTHZDB@
 cumulus.repo.dir=/@CUMULUSDIR@/posixdata
