fixing and integrating installation scripts
adding https configuration

--- a/service/service/java/source/etc/workspace-service/other/common.conf
+++ b/service/service/java/source/etc/workspace-service/other/common.conf
@@ -62,5 +62,5 @@ caches.dir=/@WORKSPACE_PERSISTENCEDIR@/caches
 msgsinks.dir=/@WORKSPACE_PERSISTENCEDIR@/msg-sinks
 
 cumulus.home.dir=/@CUMULUSDIR@
-cumulus.authz.db=/@CUMULUSDIR@/etc/authz.db
+cumulus.authz.db=/@AUTHZDB@
 cumulus.repo.dir=/@CUMULUSDIR@/posixdata
