Almost all the work needed in order to make the Nimbus directory portable (if you run nimbus-configure after moving it).
Changed path configuration to be file-backed Spring Resource configurations
instead of straight paths.  This change allows all of the configurations to
use our new "NimbusFileSystemXmlApplicationContext" instead of the Spring
default "FileSystemXmlApplicationContext."  The new context allows
$NIMBUS_HOME to be respected in path configurations.  The old strategy was
to write absolute paths into configurations during the installation.

The jndi-config.xml contains settings to bootstrap Spring, these are paths
that are insptected before any ApplicationContext exists so our path
translation (that respects $NIMBUS_HOME) can not take its effect yet.
Those settings are now relative paths.
See: `git diff home/sbin/run-services.sh`

The following commands are being used to test this.

$ ./bin/install /tmp/nimbus-relpath
$ /tmp/nimbus-relpath/bin/nimbusctl start
$ /tmp/nimbus-relpath/bin/nimbusctl stop
$ mv /tmp/nimbus-relpath /tmp/nimbus-newpath
$ cd /tmp/nimbus-newpath
$ ./bin/nimbus-configure
$ export GLOBUS_LOCATION=`pwd`/services
$ ant -f $GLOBUS_LOCATION/share/nimbus/lib/write-props.xml
$ /tmp/nimbus-newpath/bin/nimbusctl start

As you can see, the changeover required writing a new ant file 'write-props.xml'
that, after moving Nimbus around, will change path configurations that allow the
database scripts to run (those scripts like "servicedb-reset.sh" in
$NIMBUS_HOME/services/share/nimbus).

Need to discuss best place to make that ant call behind the scenes... we
should only have to call nimbus-configure.

Query is currently broken.  Need to discuss how to make it respect this
new file-based resource (or maybe just need to look more soon).  Because of CXF
(I imagine), it seems to think the configuration is a servlet context resource
instead of a file based one (and so it is looking in the jar's WEB-INF directory).

--- a/messaging/query/java/source/etc/query/query.conf
+++ b/messaging/query/java/source/etc/query/query.conf
@@ -12,7 +12,7 @@ https.port=8444
 # path to Java keystore file, for serving up Query API via SSL.
 # This file is created by the installer, and should be placed in
 # $NIMBUS_HOME/var/keystore.jks
-keystore.path=@DEPLOY_DIR@/../var/keystore.jks
+keystore.path=$NIMBUS_HOME/var/keystore.jks
 
 # password of java keystore specified above.
 # Note: You can change this password if you like, but it practice it doesn't
@@ -27,10 +27,10 @@ keystore.password=changeit
 # You probably don't want to change anything below here!        #
 #################################################################
 
-query.spring.path=file://@QUERY_CONFDIR@/other/main.xml
+query.spring.path=$NIMBUS_HOME/services/etc/nimbus/query/other/main.xml
 
 # path of file containing mappings of query access credentials to DNs
-query.usermap.path=/@QUERY_CONFDIR@/users.txt
+query.usermap.path=$NIMBUS_HOME/services/etc/nimbus/query/users.txt
 
 # header buffer size in bytes (for larger user-data, etc.)
 query.header.size=8192
