--- a/messaging/rest/java/source/etc/rest/rest.conf
+++ b/messaging/rest/java/source/etc/rest/rest.conf
@@ -1,12 +1,12 @@
 rest.enabled=false
 rest.port=4443
 
-keystore.path=/path/to/keystore
+keystore.path=$NIMBUS_HOME/var/keystore.jks
 keystore.password=secrets
 
 gridmap.path=file:///path/to/grid-mapfile
 groupauthz.path=
-query.usermap.path=file://@QUERY_CONFDIR@/users.txt
+query.usermap.path=$NIMBUS_HOME/services/etc/nimbus/query/users.txt
 gridmap.localuser=cloudimages
 
-rest.spring.path=file://@REST_CONFDIR@/other/main.xml
+rest.spring.path=$NIMBUS_HOME/services/etc/nimbus/rest/other/main.xml
