--- a/service/service/java/source/etc/workspace-service/other/common.conf
+++ b/service/service/java/source/etc/workspace-service/other/common.conf
@@ -38,7 +38,11 @@ fake.lag.ms=3000
 # Absolute path to the directory above, which is likely to look like
 # "$ANYWHERE/nimbus/workspace-service"
 
-conf.dir=$NIMBUS_HOME/services/etc/workspace-service
+# In order to make everything portable, use "$NIMBUS_HOME" instead of an actual
+# absolute path.  This is a special token that is replaced with the value of the
+# environment variable "NIMBUS_HOME" which the 'nimbusctl' program will set.
+
+conf.dir=$NIMBUS_HOME/services/etc/nimbus/workspace-service
 
 
 # Path to the base derby directory (for setting the "derby.system.home"
